# rehash

./: .gitignore  Cargo.toml  NIXOS_INTEGRATION.md  README.md  flake.nix  install.sh
examples/: README.md  generate_test_data.sh  sample_history.jsonl
shell/: rehash.bash  rehash.zsh
src/: history.rs  main.rs  search.rs  storage.rs
