[package]
name = "rehash"
version = "0.1.0"
edition = "2021"
description = "A lightweight shell history manager with fuzzy search"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "rehash"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fuzzy-matcher = "0.3"
dirs = "5.0"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
console = "0.15"
atty = "0.2"

[dev-dependencies]
tempfile = "3.0"